--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_history.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_history.xml
@@ -25,7 +25,7 @@
             >
 
             <TextView
-                android:id="@+id/textViewTransType"
+                android:id="@+id/textViewTransTypeText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15px"
