--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_forgot_password.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_forgot_password.xml
@@ -115,7 +115,7 @@
                 android:layout_height="99px"
                 android:layout_marginTop="45px"
                 android:background="@drawable/orange_btn_selector"
-                android:text="Send"
+                android:text="@string/send"
                 android:textColor="@drawable/white_color_selector"
                 android:textSize="@dimen/button_text_size"/>
 
