--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_request_duplicate_registration.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_request_duplicate_registration.xml
@@ -136,7 +136,7 @@
                             android:textColor="@color/black_text"
                             android:textSize="28px"
                             android:layout_marginLeft="40px"
-                            android:text="Phone:"/>
+                            android:text="@string/phone"/>
 
                         <TextView
                             android:id="@+id/textViewRegisterPhoneValue"
