--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_change_phone_before_verify.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_change_phone_before_verify.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:text="CHANGE PHONE NUMBER"
+            android:text="@string/change_phone_no"
             android:textColor="@color/white"
             android:textSize="36px" />
 
