--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_notification_center.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_notification_center.xml
@@ -65,7 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="No Current Notifications"
+                android:text="@string/no_current_notification"
                 android:textColor="@color/black"
                 android:textSize="32px"
                 android:layout_marginTop="30px"
