--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_help.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_help.xml
@@ -11,7 +11,7 @@
         android:id="@+id/topRl"
         android:layout_width="match_parent"
         android:layout_height="90px"
-        android:background="@color/bg_grey_opaque"
+        android:background="@color/menu_black"
         android:splitMotionEvents="false" >
 
         <Button
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:text="Help"
+            android:text=""
             android:textColor="@color/white"
             android:textSize="48px" />
     </RelativeLayout>
